gerador-back/src/main/java/com/example/geradorback/services/error/ConstantesUtil.java
package com.example.geradorback.services.error;

import lombok.NoArgsConstructor;

@NoArgsConstructor
public class ConstantesUtil {
    public static final String ERROR_TITLE = "Ocorreu um erro";
    public static final String USUARIO_EXISTE = "Usuário já existe";
    public static final String USUARIO_NAO_ENCONTRADO = "Usuário não encontrado";
    public static final String ERRO_GERAR_TOKEN = "Erro ao gerar token";
    public static final String ERRO_VALIDAR_TOKEN = "Erro ao validar token";
    public static final String CREDENCIAIS_INVALIDAS = "Dados inválidos, verifique seu e-mail e senha";
}
